--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     -->
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
 
-  <title>React App</title>
+  <title>Portfolio - José Santillán</title>
 </head>
 
 <body>
